--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
             else {<br>
               next[i][j] = state;<br>
             }
+          }<br>
+          else {<br>
+            next[i][j] = state;<br>
+          }
           </p>
       </div>
     </div>
@@ -45,9 +49,9 @@
           <button class="collapsible">Proposition 2</button>
           <div class="content">
             <div class="contentContainer">
-                <p>A. Dead cells with exactly three live neighbours will become live cells. They are parents, caretakers, and guardians.</p><br>
-                <p>B. Live cells with two or three live neighbours will survive to the next generation. This is the ideal local population.</p><br>
-                <p>C. Live cells that do not meet any mentioned criteria will die in the next generation. Dead cells stay dead.</p>
+                <p>A. Dead cells with exactly three live neighbours will become live cells. These neighbouring cells are parents, they are caretakers.</p><br>
+                <p>B. Live cells with two or three live neighbours will survive to the next generation. This is the ideal local population. There is enough resources to share among everyone.</p><br>
+                <p>C. Live cells that do not meet any mentioned criteria will die in the next generation. They have suffered from starvation, either from overpopulation or underpopulation. Dead cells stay dead.</p>
             </div>
           </div>
           <button class="collapsible">Proposition 3</button>
@@ -92,17 +96,16 @@
 
                 </p><br>
                 <p>
-                  C. I once met up with a man slightly more than double my age at his apartment in San Francisco.
+                  C. I once met up with a man slightly more than double my age at his San Francisco apartment for a sort of 'semi-date'.
                   We're talking on the roof terrace and I remember asking him, rather bluntly: "So what exactly did you want from meeting me?"
-                  I already knew at least part of the answer.
-                  I didn't ask so I could mentally shame him for wanting to have sex with a younger man, presumably me.
+                  I correctly assumed at least part of his answer and in hindsight the question may have come off as rude.
+                  But I didn't ask so I could mentally shame him for wanting to have sex with a younger man, presumably me in this case.
                   I asked because I wondered if there were men out there, older gay men in particular, who have what I now call 'son issues.'
                   A sort of 'daddy issues' in reverse.
                   Later, when I Google'd the term, Urban Dictionary confirmed that this idea is indeed a thing.
                   How common?
                   I'm not sure.
                   I guess I just wanted to know if he too felt that there was something missing and sought to fill it.
-
                 </p>
             </div>
           </div>
@@ -111,7 +114,6 @@
 
         </div>
       </center>
-      <div class="whiteSpace"></div>
 
     </div>
 
