--- a/index.html
+++ b/index.html
@@ -25,10 +25,6 @@
             else {<br>
               next[i][j] = state;<br>
             }
-          }<br>
-          else {<br>
-            next[i][j] = state;<br>
-          }
           </p>
       </div>
     </div>
@@ -97,14 +93,13 @@
                 </p><br>
                 <p>
                   C. I once met up with a man slightly more than double my age at his San Francisco apartment for a sort of 'semi-date'.
-                  We're talking on the roof terrace and I remember asking him, rather bluntly: "So what exactly did you want from meeting me?"
-                  I correctly assumed at least part of his answer and in hindsight the question may have come off as rude.
-                  But I didn't ask so I could mentally shame him for wanting to have sex with a younger man, presumably me in this case.
+                  We're talking on the roof terrace and I remember asking him, rather bluntly: What exactly did he want in meeting me today?
+                  I correctly assumed at least part of his answer.
+                  In hindsight the question may have come off as rude, but I didn't ask so I could mentally shame him for wanting to have sex with a younger man, presumably me in this case.
                   I asked because I wondered if there were men out there, older gay men in particular, who have what I now call 'son issues.'
                   A sort of 'daddy issues' in reverse.
                   Later, when I Google'd the term, Urban Dictionary confirmed that this idea is indeed a thing.
-                  How common?
-                  I'm not sure.
+                  How common, I'm not sure.
                   I guess I just wanted to know if he too felt that there was something missing and sought to fill it.
                 </p>
             </div>
