--- a/index.html
+++ b/index.html
@@ -10,101 +10,27 @@
     <center>
     <div class="websiteContainer">
       <div class="headerContainer">
-        <a  class="headerText"href="#">Ars Automata</a>
+        <a  class="headerText"href="index.html">Ars Automata</a>
       </div>
       <div id="canvasContainer"></div>
 
       <div class="introductionContainer">
         <p class="introductionText">
-          if (state == 0 && neighbors == 3) {<br>
-          next[i][j] = 1;<br>
-        }<br>
-            else if (state == 1 && neighbors < 2 || neighbors > 3) {<br>
-              next[i][j] = 0;<br>
-            }<br>
-            else {<br>
-              next[i][j] = state;<br>
-            }
+          Ars Automata is a collection of experimetal prose derived from cellular automata.
+          Specifically, it explores the British mathmetician John Horton Conway's Game of Life as a means of poetry.
+          In doing so, it builds metaphors evolved from the semantics of the computational, the mathematical, and the autonomous.
           </p>
       </div>
     </div>
 
       <center>
         <div class="collapsibleContainer">
-          <button class="collapsible">Proposition 1</button>
-          <div class="content">
-            <div class="contentContainer">
-                <p>A. Status 0 cells with exactly three Status 1 neighbor cells will become Status 1 cells.</p><br>
-                <p>B. Status 1 cells with two or three Status 1 neighbor cells will stay Status 1 cells.</p><br>
-                <p>
-                  C. Status 1 cells that do not meet any mentioned criteria will become Status 0 cells.
-                  Status 0 cells that do not meet any mentioned criteria will stay Status 0.
-                </p>
-            </div>
-          </div>
-          <button class="collapsible">Proposition 2</button>
-          <div class="content">
-            <div class="contentContainer">
-                <p>A. Dead cells with exactly three live neighbours will become live cells. These neighbouring cells are parents, they are caretakers.</p><br>
-                <p>B. Live cells with two or three live neighbours will survive to the next generation. This is the ideal local population. There is enough resources to share among everyone.</p><br>
-                <p>C. Live cells that do not meet any mentioned criteria will die in the next generation. They have suffered from starvation, either from overpopulation or underpopulation. Dead cells stay dead.</p>
-            </div>
-          </div>
-          <button class="collapsible">Proposition 3</button>
-          <div class="content">
-            <div class="contentContainer">
-              <p>
-                A. How many people does it take to live?
-                Not to be born, but to stay alive?
-                Archeology tells us that two are needed: our parents. In prehistoric hunter-gatherer societies, sexual division of labour gave the Homo sapiens an essential organizational advantage over the Neanderthals.
-                I can only assume this tendency carried over through generations as humanity continued to evolve.
-                Now, to live arguably means more than to simply be alive in a biological sense.
-                It means to feel real.
-              </p><br>
-              <p>
-                B. In recent US history, there has been a dramatic increase nationwide in gay marriages, adoptions, polyamorous relationships, and single parent households.
-                The idea of what constitutes a family has been endlessly deconstructed, redefined, and then deconstructed again.
-              </p><br>
-              <p>
-                C. I want to ask then, how many people does it take to live today?
-                But really, this question isn't for anyone to answer.
-                I want to live. I want to feel real.
-              </p>
-            </div>
-          </div>
-          <button class="collapsible">Proposition 4</button>
-          <div class="content">
-            <div class="contentContainer">
-              <p>A. Live cells with two or three live neighbours will survive to the next generation. This is the ideal local population.</p><br>
-                <p>B. Dead cells with exactly three live neighbours will become live cells. They are parents, caretakers, and guardians.</p><br>
-                <p>C. Live cells that do not meet any mentioned criteria will die in the next generation. Dead cells stay dead.</p>
+          <button class="mainPageButton" onclick="location='chapter1.html'">Chapter 1</button>
 
-            </div>
-          </div>
-          <button class="collapsible">Proposition 5</button>
-          <div class="content" id="lastCollapsibleContent">
-            <div class="contentContainer">
-              <p>
-                A. Wikipedia tells me that self organization, or spontaneous order, is a process where some form of overall order arises from local interactions between parts of an initally disordered system.
-              </p><br>
-                <p>
-                  B. My therapist asks me rhetorically: "Well who wouldn't want a caring, supportive, and strong figure in their life?"
+          <button class="mainPageButtonInactive" id="lastCollapsibleContent">Chapter 2 (Coming Soon)</button>
 
-                </p><br>
-                <p>
-                  C. I once met up with a man slightly more than double my age at his San Francisco apartment for a sort of 'semi-date'.
-                  We're talking on the roof terrace and I remember asking him, rather bluntly: What exactly did he want in meeting me today?
-                  I correctly assumed at least part of his answer.
-                  In hindsight the question may have come off as rude, but I didn't ask so I could mentally shame him for wanting to have sex with a younger man, presumably me in this case.
-                  I asked because I wondered if there were men out there, older gay men in particular, who have what I now call 'son issues.'
-                  A sort of 'daddy issues' in reverse.
-                  Later, when I Google'd the term, Urban Dictionary confirmed that this idea is indeed a thing.
-                  How common, I'm not sure.
-                  I guess I just wanted to know if he too felt that there was something missing and sought to fill it.
-                </p>
-            </div>
-          </div>
 
+          <div class="whiteSpace"></div>
           <div class="whiteSpace"></div>
 
         </div>
