--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
       <div class="introductionContainer">
         <p class="introductionText">
-          Ars Automata is a collection of experimetal prose derived from cellular automata.
+          Ars Automata is a collection of experimental prose derived from cellular automata.
           Specifically, it explores the British mathmetician John Horton Conway's Game of Life as a means of poetry.
           In doing so, it builds metaphors evolved from the semantics of the computational, the mathematical, and the autonomous.
           </p>
