--- a/index.html
+++ b/index.html
@@ -9,11 +9,10 @@
   <body>
     <center>
     <div class="websiteContainer">
-      <div class="headerContainer">
-        <a  class="headerText"href="index.html">Ars Automata</a>
-      </div>
-      <div id="canvasContainer"></div>
+      <div class="homeDisplayContainer">
+        <p id="sequence"></p>
 
+      </div>
       <div class="introductionContainer">
         <p class="introductionText">
           Ars Automata is a collection of experimental prose derived from cellular automata.
@@ -44,5 +43,6 @@
     <script src="p5.min.js" charset="utf-8"></script>
     <script src="sketch.js" charset="utf-8"></script>
     <script type="text/javascript" src="collapsible.js"></script>
+    <script type="text/javascript" src="visualEffects.js"></script>
   </body>
 </html>
