--- a/index.html
+++ b/index.html
@@ -9,18 +9,18 @@
   <body>
     <center>
     <div class="websiteContainer">
-      <div class="homeDisplayContainer">
+      <center>
+      <div id="homeDisplayContainer">
         <p id="sequence"></p>
-
       </div>
+
       <div class="introductionContainer">
         <p class="introductionText">
-          Ars Automata is a collection of experimental prose derived from cellular automata.
+          &emsp;Ars Automata is a collection of experimental prose derived from cellular automata.
           Specifically, it explores the British mathmetician John Horton Conway's Game of Life as a means of poetry.
           In doing so, it builds metaphors evolved from the semantics of the computational, the mathematical, and the autonomous.
           </p>
       </div>
-    </div>
 
       <center>
         <div class="collapsibleContainer">
@@ -33,6 +33,7 @@
           <div class="whiteSpace"></div>
 
         </div>
+
       </center>
 
     </div>
@@ -41,7 +42,6 @@
 
     <script src="p5.js" charset="utf-8"></script>
     <script src="p5.min.js" charset="utf-8"></script>
-    <script src="sketch.js" charset="utf-8"></script>
     <script type="text/javascript" src="collapsible.js"></script>
     <script type="text/javascript" src="visualEffects.js"></script>
   </body>
