--- a/index.html
+++ b/index.html
@@ -11,15 +11,17 @@
     <div class="websiteContainer">
       <center>
       <div id="homeDisplayContainer">
-        <p id="sequence"></p>
+        <p id="sequence"></p><br>
       </div>
 
       <div class="introductionContainer">
         <p class="introductionText">
           &emsp;Ars Automata is a collection of experimental prose derived from cellular automata.
-          Specifically, it explores the British mathmetician John Horton Conway's Game of Life as a means of poetry.
-          In doing so, it builds metaphors evolved from the semantics of the computational, the mathematical, and the autonomous.
-          </p>
+          Specifically, it explores the British mathmetician John Horton Conway's Game of Life as a means of poetry, creating metaphors evolved from the semantics of the computational, the mathematical, and the autonomous.
+          <br>&emsp;Ars Automata was conceived, designed, developed, and authored by <a href="https://aldonchen.com">Aldon Chen</a> in February of 2021, who continues to develop the project.
+          A special thanks to <a href="http://www.stephenhendee.com">Stephen Hendee</a> and <a href="https://shiffman.net">Daniel Shiffman</a>.
+
+        </p>
       </div>
 
       <center>
