--- a/preface.html
+++ b/preface.html
@@ -33,6 +33,7 @@
           <button class="nextButton" onclick="location='chapter1.html'" id="lastCollapsibleContent">Chapter 1 ></button>
 
           <div class="whiteSpace"></div>
+          <div class="whiteSpace"></div>
 
         </div>
       </center>
