--- a/attributionsCitations.html
+++ b/attributionsCitations.html
@@ -18,9 +18,9 @@
       <div class="introductionContainer">
         <p class="introductionText">
           Atrributions and Works Cited
-          <br><br>Neue Machina by Pangram Pangram Type Foundry.
-          <br><br>FraktionMono by Pangram Pangram Type Foundry.
-          <br><br>Simulations modified and adapted from Daniel Shiffman with an MIT License. Full notice included in code.
+          <br><br>Neue Machina by the Pangram Pangram Foundry.
+          <br><br>FraktionMono by the Pangram Pangram Foundry.
+          <br><br>Simulations modified and adapted from Daniel Shiffman with an MIT License. Full notice and citation included in code.
           <br><br>Hoefer, Carl, "Causal Determinism", The Stanford Encyclopedia of Philosophy (Spring 2016 Edition), Edward N. Zalta (ed.), URL = &lt;https://plato.stanford.edu/archives/spr2016/entries/determinism-causal/&gt;.
           <br><br>Hume, David (1748). An Enquiry Concerning Human Understanding. §132.
           <br><br>Wikipedia contributors. "Self-organization." Wikipedia, The Free Encyclopedia. Wikipedia, The Free Encyclopedia, 16 Jan. 2021. Web. 3 Mar. 2021.
