--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="introductionContainer">
         <p class="introductionText">
           &emsp;Ars Automata is a collection of experimental prose derived from cellular automata.
-          Specifically, it explores the British mathmetician John Horton Conway's Game of Life as a means of poetry, creating didactic metaphors evolved from a semantic view of the computational, the mathematical, and the autonomous.
+          Specifically, it explores the British mathmetician John Horton Conway's Game of Life as a means of poetry, creating didactic metaphors evolved from the computational, the mathematical, and the autonomous.
           <br>&emsp;Ars Automata was conceived, designed, developed, and authored by <a href="https://aldonchen.com">Aldon Chen</a> in February of 2021, who continues to develop the project.
           A special thanks to <a href="http://www.stephenhendee.com">Stephen Hendee</a>, <a href="https://shiffman.net">Daniel Shiffman</a>, and the <a href="https://pangrampangram.com">Pangram Pangram Foundry</a>.
 
@@ -27,7 +27,7 @@
 
       <center>
         <div class="collapsibleContainer">
-          <button class="mainPageButton" onclick="location='preface.html'">Start Reading</button>
+          <button class="mainPageButton" onclick="location='arsAutomata.html'">Begin Reading</button>
 
           <button class="mainPageButton" id="lastCollapsibleContent" onclick="location='attributionsCitations.html'">Attributions and Citations</button>
 
