--- a/arsAutomata.html
+++ b/arsAutomata.html
@@ -20,7 +20,7 @@
           <div class="content">
             <div class="contentContainer">
               1. Do you believe in a god?
-      <br><br>2. Cellular automata is a model of computation that is self-propelling. Simply put, a cellular automaton consist of a grid of cells, each classified as one of two states. Each cell is programmed to automatically compute based on the status of other neighboring cells according to a predetermined set of rules.
+      <br><br>2. Cellular automata is a model of computation that is self-propelling. Simply put, a cellular automaton is grid of cells where each cell is classified as one of two states: zero or one. Each cell is programmed to automatically compute based on the status of other neighboring cells according to a predetermined set of rules.
       <br><br>3. Determinism, or more namely causal determinism is “the idea that every event is necessitated by antecedent events and conditions together with the laws of nature.” (Hoefer) Under this idea, our thoughts and decisions are never really ours alone. I am sharing these writings with you, reader, because in many ways, they are also yours.
       <br><br>4. I have never thought of myself as someone who participates in religion and worship. To this day I still don't consider myself to be a religious person in the vernacular sense. However, I have also recently began to understand humanity’s current paradigm of thinking as sort of hyper-rational, as to look down on any and all forms of religion, spirituality, metaphysics, and anything else that does not follow the time’s empirical way of thinking. In his <i> Enquiry Concerning Human Understanding </i> (1748) Hume concludes: “If we take in our hand any volume [book]; of divinity or school metaphysics, for instance; let us ask, Does it contain any abstract reasoning concerning quantity or number? No. Does it contain any experimental reasoning concerning matter of fact and existence? No. Commit it then to the flames: for it can contain nothing but sophistry and illusion.” (Hume) Intellectually, I am inclined to agree with him and the current paradigm of thinking. In so far that I my interests, morals, and ideas have all been undeniably influenced by naturalist philosophy to some extent. However, despite my ongoing fascination with this line of thinking, I am not entirely happy with my belief; How it tells me that I am essentially a cell.
 
@@ -70,7 +70,9 @@
                   A. Dead cells with exactly three live neighbors will become live cells in the next generation. These neighboring cells are the things the cell needs to live.
                 </p><br>
                 <p>
-                  B. Live cells with less than two or more than three live neighbors will die in the next generation. They have starved to death.
+                  B. Live cells with less than two or more than three live neighbors will die in the next generation.
+                  This is referred to as either underpopulation or overcrowding respectively.
+                  They have starved to death.
                 </p><br>
                 <p>
                   C. Cells of any status that do not meet any mentioned criteria will maintain their respective status' in the next generation.
@@ -127,7 +129,7 @@
           <div class="content">
             <div class="contentContainer">
               <p>
-                A. Exactly three cells are needed to bring a dead cell to life. This process is referred to as reproduction in Conway’s Game of LIfe. Why three?
+                A. Exactly three cells are needed to bring a dead cell to life. This process is referred to as reproduction in Conway’s Game of Life. Why three?
               </p><br>
                 <p>
                   B. Prehistoric hunter-gatherer societies were usually groups of a few dozens of people and could be seen as several family units working with one another. At some point, families, and hence individuals, discovered that they had a better chance of survival if they worked cooperatively with others.
@@ -159,10 +161,10 @@
                     A. Many of my friends are currently attending a variety of prestigious colleges. I am happy for them, genuinely. However, I’d be lying if I said that this fact hadn’t planted within me a deep resentment towards myself. This resentment fueled me endlessly, towards my goals and towards my unhappiness. Both. But how can it be both?
                   </p><br>
                     <p>
-                      B. The words "absolute fuck-up” have never sounded so clearly to me than when I was taking a gap year before college. I always imagined the words being shouted at me by someone like J.K. Simmons’ character in <i>Whiplash</i>: viscerally anxiety inducing to an almost sadistic degree. When RISD accepted me into the class of 2024, I couldn’t afford attending without taking on loans in the hundreds of thousands. I didn’t go. At this point, prestige becomes a lifeline, a drug, and as long as I am obsessed with it, a whip.
+                      B. The words "absolute fuck-up” have never sounded so clearly to me than when I was taking a gap year before college. I always imagined the words being shouted at me by someone like J.K. Simmons’ character in <i>Whiplash</i>: viscerally anxiety inducing to an almost sadistic degree. When RISD accepted me into their class of 2024, I couldn’t afford attending without taking on loans in the hundreds of thousands. I didn’t go. At this point, prestige becomes a lifeline, a drug, and as long as I am obsessed with it, a whip.
                     </p><br>
                     <p>
-                      C.  My solution then, was to begin playing a game I jokingly called “Collecting the Ivy League” in which I would date men who had graduated from prestigious universities. I met men who had graduated from Harvard, Yale, UPenn, and entertained the idea of meeting others who graduated from similarly ranked universities; Unaware, or perhaps in denial of the idea that I was essentially commodifying myself for these men as if doing so would metaphysically transfer their perceived prestige to me. Perhaps it was a sort of transaction, a commodification of each other from both ends in which I always lost.
+                      C.  My solution then, was to begin playing a game I jokingly called “Collecting the Ivy League” in which I would date men who had graduated from prestigious universities. I met men who had graduated from Harvard, Yale, UPenn, and entertained the idea of meeting others who graduated from similarly ranked universities. Unaware, or perhaps in denial of, the idea that I was essentially commodifying myself for these men, as if doing so would metaphysically transfer their perceived prestige to me. Perhaps it was a sort of transaction, a commodification of each other from both ends. This is emptiness trying to fill itself with more emptiness.
                     </p>
                 </div>
               </div>
@@ -201,7 +203,7 @@
                   <div class="content">
                     <div class="contentContainer">
                       <p>
-                        A. Picture a series of three cells next to one another, forming a short line pointed horizontally or vertically, and isolated from any other cells that may have otherwise interfered. This arrangement allows these cells to infinitely compute between two positions, horizontally then vertically, then horizontally, and so forth. This particular pattern is called a ‘blinker.’ Blinkers are but one of the many ‘oscillators’ in the Game of Life: patterns of cells that oscillate between two states indefinitely.
+                        A. Picture a series of three cells next to one another, forming a short line pointed horizontally or vertically and isolated from any other cells that may have otherwise interfered. This arrangement allows these cells to infinitely compute between two positions, horizontally then vertically, then horizontally, and so forth. This particular pattern is called a ‘blinker.’ Blinkers are but one of the many ‘oscillators’ in the Game of Life: patterns of cells that oscillate between two states indefinitely.
                       </p><br>
                         <p>
                           B. In The Game of Life, a ‘still life’ is any pattern of cells that no longer changes from one generation to the next.  In this arrangement, these cells cannot die or form new cells; They exist in a perpetual stillness, hence the name. However, the term ‘still life’ implies a sort of paradox, as it isn’t entirely clear if they are actually alive. What happens to a cell when it constantly has the required neighboring cells to live?
