--- a/arsAutomata.html
+++ b/arsAutomata.html
@@ -144,12 +144,16 @@
               <div class="contentContainer">
                 <p>
                   A. When I think of my father, I cannot say that he didn’t love me. Rather, I think of how he was never really here with me.
+                  Those close to me have be told me that I am excessively self-critical, emotionally unavailable, and overly strict.
+                  I have come to understand that these observations are true, more or less. I guess this is my way of becoming my own sort of makeshift father. Makeshift.
                 </p><br>
                   <p>
                     B. In a therapy session I bring up that I've been wallowing in self hatred towards the fact that I happen to only be interested in dating older men. My therapist rhetorically asks me: "Well who wouldn't want a strong, caring, and supportive figure in their life?”
+                    I want to say that not all older men are fatherly, and not all fatherly figures want sons.
                   </p><br>
                   <p>
                     C. I once met up with a man slightly more than double my age at his San Francisco apartment for a sort of ‘semi-date'. We're talking on the roof terrace and I remember asking him, rather bluntly: What exactly did he want in meeting me today? I correctly assumed at least part of his answer. In hindsight the question may have come off as rude, but I didn't ask so I could mentally shame him for wanting to have sex with a younger man, presumably me in this case. I asked because I wondered if there were men out there, older gay men in particular, who have what I now call 'son issues.’ A sort of 'daddy issues' in reverse. Later, when I Google'd the term, Urban Dictionary confirmed that this idea is indeed a thing. How common, I'm not sure. I guess I just wanted to know if he too felt that there was something missing and sought to fill it.
+                    I don't need anyone to '@' me for meeting with older men, I'm aware of how naive I am being. But the fact remains that my fatherlessness has left me a house made of sticks. Who can blame me for wanting to find some glue?
                   </p>
               </div>
             </div>
