--- a/arsAutomata.html
+++ b/arsAutomata.html
@@ -144,7 +144,7 @@
               <div class="contentContainer">
                 <p>
                   A. When I think of my father, I cannot say that he didn’t love me. Rather, I think of how he was never really here with me.
-                  Those close to me have be told me that I am excessively self-critical, emotionally unavailable, and overly strict.
+                  Those close to me have told me that I am excessively self-critical, emotionally unavailable, and overly strict.
                   I have come to understand that these observations are true, more or less. I guess this is my way of becoming my own sort of makeshift father. Makeshift.
                 </p><br>
                   <p>
