--- a/arsAutomata.html
+++ b/arsAutomata.html
@@ -135,7 +135,7 @@
                   B. Prehistoric hunter-gatherer societies were usually groups of a few dozens of people and could be seen as several family units working with one another. At some point, families, and hence individuals, discovered that they had a better chance of survival if they worked cooperatively with others.
                 </p><br>
                 <p>
-                  C. In recent US history, there has been a dramatic increase nationwide in gay marriages, adoptions, polyamorous relationships, and single parent households. The idea of what constitutes a family has been endlessly deconstructed, redefined, and then deconstructed again. How do we determine who is a part of our family? How do we know which spaces to fill? How many empty spaces there are to fill? I am ashamed to say that I was once compelled by these questions. I am trying to give up.
+                  C. In recent US history, there has been a dramatic increase nationwide in gay marriages, adoptions, polyamorous relationships, and single parent households. The idea of what constitutes a family has been endlessly deconstructed, redefined, and then deconstructed again. How do we determine who is a part of our family? How many empty spaces are there to fill? How do we know which spaces to fill? I am ashamed to say that I was once compelled by these questions. I am trying to give up.
                 </p>
             </div>
           </div>
