--- a/arsAutomata.html
+++ b/arsAutomata.html
@@ -143,17 +143,13 @@
             <div class="content">
               <div class="contentContainer">
                 <p>
-                  A. When I think of my father, I cannot say that he didn’t love me. Rather, I think of how he was never really here with me.
-                  Those close to me have told me that I am excessively self-critical, emotionally unavailable, and overly strict.
-                  I have come to understand that these observations are true, more or less. I guess this is my way of becoming my own sort of makeshift father. Makeshift.
+                  A. Omitted
                 </p><br>
                   <p>
-                    B. In a therapy session I bring up that I've been wallowing in self hatred towards the fact that I happen to only be interested in dating older men. My therapist rhetorically asks me: "Well who wouldn't want a strong, caring, and supportive figure in their life?”
-                    I want to say that not all older men are fatherly, and not all fatherly figures want sons.
+                    B. Omitted
                   </p><br>
                   <p>
-                    C. I once met up with a man slightly more than double my age at his San Francisco apartment for a sort of ‘semi-date'. We're talking on the roof terrace and I remember asking him, rather bluntly: What exactly did he want in meeting me today? I correctly assumed at least part of his answer. In hindsight the question may have come off as rude, but I didn't ask so I could mentally shame him for wanting to have sex with a younger man, presumably me in this case. I asked because I wondered if there were men out there, older gay men in particular, who have what I now call 'son issues.’ A sort of 'daddy issues' in reverse. Later, when I Google'd the term, Urban Dictionary confirmed that this idea is indeed a thing. How common, I'm not sure. I guess I just wanted to know if he too felt that there was something missing and sought to fill it.
-                    I don't need anyone to '@' me for meeting with older men, I'm aware of how naive I am being. But the fact remains that my fatherlessness has left me a house made of sticks. Who can blame me for wanting to find some glue?
+                    C. Omitted
                   </p>
               </div>
             </div>
@@ -168,7 +164,7 @@
                       B. The words "absolute fuck-up” have never sounded so clearly to me than when I was taking a gap year before college. I always imagined the words being shouted at me by someone like J.K. Simmons’ character in <i>Whiplash</i>: viscerally anxiety inducing to an almost sadistic degree. When RISD accepted me into their class of 2024, I couldn’t afford attending without taking on loans in the hundreds of thousands. I didn’t go. At this point, prestige becomes a lifeline, a drug, and as long as I am obsessed with it, a whip.
                     </p><br>
                     <p>
-                      C.  My solution then, was to begin playing a game I jokingly called “Collecting the Ivy League” in which I would date men who had graduated from prestigious universities. I met men who had graduated from Harvard, Yale, UPenn, and entertained the idea of meeting others who graduated from similarly ranked universities. Unaware, or perhaps in denial of, the idea that I was essentially commodifying myself for these men, as if doing so would metaphysically transfer their perceived prestige to me. Perhaps it was a sort of transaction, a commodification of each other from both ends. This is emptiness trying to fill itself with more emptiness.
+                      C.  Omitted
                     </p>
                 </div>
               </div>
